--- a/pages/about.html
+++ b/pages/about.html
@@ -24,7 +24,8 @@
     <nav>
         <ul class="sidebar">
             <li onclick=hideSidebar()><a href="#"><i class="fa fa-close"style="font-size:32px"></i></a></li>
-            <li><a href="/pages/about.html"><span>About</span></a></li>
+            <li><a href="/index.html">Home</a></li>
+            <li><a href="/pages/about.html">About</a></li>
             <li><a href="/pages/activities.html">Activities</a></li>
             <li><a href="/pages/media.html">In Media</a></li>
             <li><a href="/pages/contact.html">Contact</a></li>
@@ -32,6 +33,7 @@
         </ul>
         <ul>
             <li><a href="/index.html"><img src="/images/logo.png" alt=""></a></li>
+            <li class="hide-mobile"><a href="/index.html">Home</a></li>
             <span><li class="hide-mobile"><a href="/pages/about.html">About</a></li></span>
             <li class="hide-mobile"><a href="/pages/activities.html">Activities</a></li>
             <li class="hide-mobile"><a href="/pages/media.html">In Media</a></li>
@@ -92,6 +94,23 @@
         <br>
             In the political arena, Sri Nooka Reddy Garu has been a dynamic and persistent advocate for the development of Gajuwaka. His unwavering commitment to improving the community's infrastructure, social welfare, and overall quality of life has cemented his reputation as a compassionate and effective leader dedicated to progress.
         </p>
+        <hr>
+
+        <p>
+            Human life is very precious. As mentioned in The Bhagavadgeetha, after the creation of 1 less 84 lakhs creatures, 84th lakh creation is the invaluable human life. To justify this precious life by serving the society is the motive of Sri Nooka Reddy Garu. A Panchathantra by Shri Vishnu Sharma played a major role in Reddy Garu's Llife. It says,
+        </p>
+
+        <div class="slokam">
+            <p>అసారే ఖలు సంసారే మృతః కోవా న జాయితీ | <br> యేన జాతేన బహవః జీవని స ఏవ జీవతి  || </p>
+        </div>
+        <p>
+            A meaningful life is of the one, whose life help a million lives and Nooka Reddy Garu believes this deeply. Motivated by the life stories of Swami Vivekananda, Goutham Buddha, and Mother Teresa, Reddy Garu stepped forward to fulfill the purpose of the precious human life. MCA and M.Phil are his Education Qualifications. 
+        </p><br>
+        <p>" స్వయం తీర్ణా పరాం స్రారయతి " This is a saying in sanskrit which means, </p> <br>
+        <p>KN Reddy, a well-educated young person, embodies the transformative power of education. He is deeply committed to fostering a supportive environment where young people can unlock their full potential and realize their aspirations. By providing opportunities for growth, development, and innovation, KN Reddy aims to inspire the next generation of leaders and problem-solvers. He believes that by investing in the education and empowerment of young people, we can create a brighter future for all.
+            <br><br>
+            KN Reddy's passion for education and youth development is unwavering. He is dedicated to making a lasting impact on the world by empowering young people to reach their full potential and become catalysts for positive change. He strives to create a world where education is accessible to all, and where young people have the opportunity to pursue their dreams and make a difference in their communities and beyond.
+        </p>
     </div>
     
 
@@ -99,6 +118,7 @@
     <!-- Footer -->
      <div class="footer-menu">
         <ul>
+            <li><a href="/index.html">Home</a></li>
             <li><a href="about.html">About</a></li>
             <li><a href="activities.html">Activities</a></li>
             <li><a href="media.html">In Media</a></li>
