--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
     <nav>
         <ul class="sidebar">
             <li onclick=hideSidebar()><a href="#"><i class="fa fa-close"style="font-size:32px"></i></a></li>
+            <li><a href="index.html">Home</a></li>
             <li><a href="/pages/about.html">About</a></li>
             <li><a href="/pages/activities.html">Activities</a></li>
             <li><a href="/pages/media.html">In Media</a></li>
@@ -32,6 +33,7 @@
         </ul>
         <ul>
             <li><a href="/index.html"><img src="images/logo.png" alt=""></a></li>
+            <span><li class="hide-mobile"><a href="index.html">Home</a></li></span>
             <li class="hide-mobile"><a href="/pages/about.html">About</a></li>
             <li class="hide-mobile"><a href="/pages/activities.html">Activities</a></li>
             <li class="hide-mobile"><a href="/pages/media.html">In Media</a></li>
@@ -56,6 +58,7 @@
     <!-- Footer -->
      <div class="footer-menu">
         <ul>
+            <li><a href="index.html">Home</a></li>
             <li><a href="pages/about.html">About</a></li>
             <li><a href="pages/activities.html">Activities</a></li>
             <li><a href="pages/media.html">In Media</a></li>
