--- a/pages/contact.html
+++ b/pages/contact.html
@@ -35,6 +35,7 @@
     <nav>
         <ul class="sidebar">
             <li onclick=hideSidebar()><a href="#"><i class="fa fa-close"style="font-size:32px"></i></a></li>
+            <li><a href="/index.html">Home</a></li>
             <li><a href="/pages/about.html">About</a></li>
             <li><a href="/pages/activities.html">Activities</a></li>
             <li><a href="/pages/media.html">In Media</a></li>
@@ -43,6 +44,7 @@
         </ul>
         <ul>
             <li><a href="/index.html"><img src="/images/logo.png" alt=""></a></li>
+            <li class="hide-mobile"><a href="/index.html">Home</a></li>
             <li class="hide-mobile"><a href="/pages/about.html">About</a></li>
             <li class="hide-mobile"><a href="/pages/activities.html">Activities</a></li>
             <li class="hide-mobile"><a href="/pages/media.html">In Media</a></li>
@@ -151,6 +153,7 @@
     <!-- Footer -->
      <div class="footer-menu">
         <ul>
+            <li><a href="/index.html">Home</a></li>
             <li><a href="about.html">About</a></li>
             <li><a href="activities.html">Activities</a></li>
             <li><a href="media.html">In Media</a></li>
