--- a/pages/contact.html
+++ b/pages/contact.html
@@ -119,7 +119,7 @@
 				        			<span class="fa fa-paper-plane"></span>
 				        		</div>
 				        		<div class="text pl-3">
-					            <p><span>Email:</span> <a href="https://preview.colorlib.com/cdn-cgi/l/email-protection#c3aaada5ac83baacb6b1b0aab7a6eda0acae"><span class="__cf_email__" data-cfemail="f0999e969fb0899f858283998495de939f9d">noelking024@gmail.com</span></a></p>
+					            <p><span>Email:</span> <a href="https://preview.colorlib.com/cdn-cgi/l/email-protection#c3aaada5ac83baacb6b1b0aab7a6eda0acae"><span class="__cf_email__" data-cfemail="f0999e969fb0899f858283998495de939f9d">knreddy.aditya@gmail.com</span></a></p>
 					          </div>
 				          </div>
 
