--- a/pages/media.html
+++ b/pages/media.html
@@ -50,6 +50,10 @@
     <!-- -----------Body--------- -->
 
     <!-- <a class="simple-ajax-popup-align-top" href="/profiles/pr1.html"><img src="/images/profile1.png" alt=""></a><br> -->
+
+    <div class="profile-intro">
+        <h1>Important Profiles Information</h1>
+    </div>
     <div class="political-profils-list">
         <div class="candidate">
             <a class="simple-ajax-popup" href="/profiles/pr1.html"><img src="/images/profile1.png" alt=""></a>
