--- a/pages/PR folder/ap-assembly.html
+++ b/pages/PR folder/ap-assembly.html
@@ -56,34 +56,26 @@
     </div>
     <div class="political-profils-list">
         <div class="candidate">
-            <a class="simple-ajax-popup" href="/pages/PR folder/mla pages/mla1.html"><img src="mla-images/mla1.png" alt=""></a>
-            <h2>SRI ASHOK BENDALAM</h2>
+            <a class="simple-ajax-popup" href="/pages/PR folder/mla pages/mla1.html"><img src="/images/cbn.png" alt=""></a>
+            <h2>Nara Chandra Babu Naidu</h2>
         </div>
         <div class="candidate">
-            <a class="simple-ajax-popup" href="/pages/PR folder/mla pages/mla2.html"><img src="mla-images/mla2.png" alt=""></a>
-            <h2>Shri Narendra Modi</h2>
+            <a class="simple-ajax-popup" href="/pages/PR folder/mla pages/mla2.html"><img src="/images/lokesh.png" alt=""></a>
+            <h2>Nara Lokesh</h2>
         </div>
         <div class="candidate">
-            <a class="simple-ajax-popup" href="/pages/PR folder/mla pages/mla3.html"><img src="mla-images/mla3.png" alt=""></a>
-            <h2>Shri Narendra Modi</h2>
+            <a class="simple-ajax-popup" href="/pages/PR folder/mla pages/mla3.html"><img src="/images/pavan.png" alt=""></a>
+            <h2>Konidala Pavan Kalyan</h2>
         </div>
         <div class="candidate">
-            <a class="simple-ajax-popup" href="/pages/PR folder/mla pages/mla4.html"><img src="mla-images/mla4.png" alt=""></a>
-            <h2>Shri Narendra Modi</h2>
+            <a class="simple-ajax-popup" href="/pages/PR folder/mla pages/mla4.html"><img src="/images/jagan.png" alt=""></a>
+            <h2>Jagan Mohan Reddy</h2>
         </div>
         <div class="candidate">
-            <a class="simple-ajax-popup" href="/pages/PR folder/mla pages/mla5.html"><img src="mla-images/mla5.png" alt=""></a>
-            <h2>Shri Narendra Modi</h2>
+            <a class="" target="_blank" href="https://aplegislature.org/web/legislative-assembly/legislative-assembly/member-s-information?p_p_id=AssemblyMemberInformation_APPortlet_INSTANCE_u0YprwIEdWmS&p_p_lifecycle=0&p_p_state=normal&p_p_mode=view&_AssemblyMemberInformation_APPortlet_INSTANCE_u0YprwIEdWmS_javax.portlet.action=getMemberDetails&_AssemblyMemberInformation_APPortlet_INSTANCE_u0YprwIEdWmS_const_id=1&_AssemblyMemberInformation_APPortlet_INSTANCE_u0YprwIEdWmS_mem_id=3107&_AssemblyMemberInformation_APPortlet_INSTANCE_u0YprwIEdWmS_term_id=16&p_auth=Nls4Rx7x"><img src="/images/group_img.png" alt=""></a>
+            <h2>View More</h2>
         </div>
-        <div class="candidate">
-            <a class="simple-ajax-popup" href="/pages/PR folder/mla pages/mla6.html"><img src="mla-images/mla6.png" alt=""></a>
-            <h2>Shri Narendra Modi</h2>
-        </div>
-        <div class="candidate">
-            <a class="simple-ajax-popup" href="/pages/PR folder/mla pages/mla7.html"><img src="mla-images/mla7.png" alt=""></a>
-            <h2>Shri Narendra Modi</h2>
-        </div>
-        <div class="candidate">
+        <!-- <div class="candidate">
             <a class="simple-ajax-popup" href="/pages/PR folder/mla pages/mla8.html"><img src="mla-images/mla8.png" alt=""></a>
             <h2>Shri Narendra Modi</h2>
         </div>
@@ -214,7 +206,7 @@
         <div class="candidate">
             <a class="simple-ajax-popup" href="/pages/PR folder/mla pages/mla40.html"><img src="mla-images/mla40.png" alt=""></a>
             <h2>Shri Narendra Modi</h2>
-        </div>
+        </div> -->
 
         </div>
 
