--- a/pages/PR folder/mla pages/mla2.html
+++ b/pages/PR folder/mla pages/mla2.html
@@ -84,7 +84,7 @@
 <body>
     <div class="green"></div>
     <div class="trial">
-        <img src="/pages/PR folder/mla-images/mla2.png" alt="">
+        <img src="/images/lokesh.png" alt="">
         <div class="trail-details">
             <ul>
                 <li><span>Name</span></li>
@@ -94,11 +94,11 @@
                 <li><span>Contact</span></li>
             </ul>
             <ul>
-                <li>SRI ASHOK BENDALAM</li>
-                <li>Doctor</li>
-                <li>74</li>
-                <li>Ramayyaputhuga(V) Kaviti(M) Itchapuram Srikakulam Dist</li>
-                <li>+91 8332005999</li>
+                <li>Nara Lokesh</li>
+                <li>-</li>
+                <li>-</li>
+                <li>Minister(Human Resources developement, IT Electronics & Communications)</li>
+                <li>+91 9999299999</li>
             </ul>
         </div>
     </div>
