--- a/pages/PR folder/mla pages/mla4.html
+++ b/pages/PR folder/mla pages/mla4.html
@@ -84,21 +84,21 @@
 <body>
     <div class="green"></div>
     <div class="trial">
-        <img src="/pages/PR folder/mla-images/mla4.png" alt="">
+        <img src="/images/jagan.png" alt="">
         <div class="trail-details">
             <ul>
                 <li><span>Name</span></li>
                 <li><span>Profession</span></li>
-                <li><span>Age</span></li>
+                <li><span>Qualification</span></li>
                 <li><span>Address</span></li>
                 <li><span>Contact</span></li>
             </ul>
             <ul>
-                <li>SRI ASHOK BENDALAM</li>
-                <li>Doctor</li>
-                <li>74</li>
-                <li>Ramayyaputhuga(V) Kaviti(M) Itchapuram Srikakulam Dist</li>
-                <li>+91 8332005999</li>
+                <li>Y.S. Jagan Mohan Reddy</li>
+                <li>Member of APLA</li>
+                <li>B.Com</li>
+                <li>Pulivendula,YSR Kadapa Dist.Andhra Pradesh.</li>
+                <li>+91 9849904123</li>
             </ul>
         </div>
     </div>
