--- a/pages/about.html
+++ b/pages/about.html
@@ -86,24 +86,35 @@
     </div>
 
     <div class="about-matter">
-        <p>
-            Sri Kolli Nooka Reddy Garu has been a transformative figure and a tireless benefactor for the people of Visakhapatnam and its surrounding areas, including Malkapuram, Old Gajuwaka, New Gajuwaka, Gantyada, Sheelanagar, Akkireddipalem, Akkayapalem, and beyond, for over two decades.  
-        <br>
-            Recognized as "The Donor of Education," Sri Nooka Reddy Garu established Sri Adithya Junior and Degree Colleges in 2000, which provided free education to students from economically weaker sections. His initiative illuminated countless lives and brought hope to families by offering opportunities for growth and learning.  
+        <img src="/images/fb_images/image11.png" alt="">
+        <div class="ab-text">
+            <p>
+                Sri Kolli Nooka Reddy Garu has been a transformative figure and a tireless benefactor for the people of Visakhapatnam and its surrounding areas, including Malkapuram, Old Gajuwaka, New Gajuwaka, Gantyada, Sheelanagar, Akkireddipalem, Akkayapalem, and beyond, for over two decades.  
+            <br>
+                Recognized as "The Donor of Education," Sri Nooka Reddy Garu established Sri Adithya Junior and Degree Colleges in 2000, which provided free education to students from economically weaker sections. His initiative illuminated countless lives and brought hope to families by offering opportunities for growth and learning.  
 
-            Moved by the loss of lives due to inadequate blood supply, Sri Nooka Reddy Garu took it upon himself to establish numerous blood banks, significantly enhancing the availability of life-saving resources in the region. His altruism extended further to empowering the underprivileged by creating economic opportunities through employment and work contracts.  
-        <br>
-            In the political arena, Sri Nooka Reddy Garu has been a dynamic and persistent advocate for the development of Gajuwaka. His unwavering commitment to improving the community's infrastructure, social welfare, and overall quality of life has cemented his reputation as a compassionate and effective leader dedicated to progress.
-        </p>
-        <hr>
+                Moved by the loss of lives due to inadequate blood supply, Sri Nooka Reddy Garu took it upon himself to establish numerous blood banks, significantly enhancing the availability of life-saving resources in the region. His altruism extended further to empowering the underprivileged by creating economic opportunities through employment and work contracts.  
+            <br>
+                In the political arena, Sri Nooka Reddy Garu has been a dynamic and persistent advocate for the development of Gajuwaka. His unwavering commitment to improving the community's infrastructure, social welfare, and overall quality of life has cemented his reputation as a compassionate and effective leader dedicated to progress.
+            </p>
+        </div>
+    </div>
+    <hr>
 
+    <div class="next-matter">
         <p>
             Human life is very precious. As mentioned in The Bhagavadgeetha, after the creation of 1 less 84 lakhs creatures, 84th lakh creation is the invaluable human life. To justify this precious life by serving the society is the motive of Sri Nooka Reddy Garu. A Panchathantra by Shri Vishnu Sharma played a major role in Reddy Garu's Llife. It says,
         </p>
+    </div>
 
-        <div class="slokam">
-            <p>అసారే ఖలు సంసారే మృతః కోవా న జాయితీ | <br> యేన జాతేన బహవః జీవని స ఏవ జీవతి  || </p>
-        </div>
+    <div class="backimg">
+        <img src="/images/fb_images/image3.png" alt="">
+    </div>
+    <!-- <img class="backimg" src="/images/fb_images/image3.png" alt=""> -->
+    <div class="slokam">
+        <p>అసారే ఖలు సంసారే మృతః కోవా న జాయితీ | <br> యేన జాతేన బహవః జీవని స ఏవ జీవతి  || </p>
+    </div>
+    <div class="about-matter2">
         <p>
             A meaningful life is of the one, whose life help a million lives and Nooka Reddy Garu believes this deeply. Motivated by the life stories of Swami Vivekananda, Goutham Buddha, and Mother Teresa, Reddy Garu stepped forward to fulfill the purpose of the precious human life. MCA and M.Phil are his Education Qualifications. 
         </p><br>
