--- a/pages/PR folder/mla pages/mla1.html
+++ b/pages/PR folder/mla pages/mla1.html
@@ -84,21 +84,21 @@
 <body>
     <div class="green"></div>
     <div class="trial">
-        <img src="/pages/PR folder/mla-images/mla1.png" alt="">
+        <img src="/images/cbn.png" alt="">
         <div class="trail-details">
             <ul>
                 <li><span>Name</span></li>
                 <li><span>Profession</span></li>
-                <li><span>Age</span></li>
+                <li><span>qualification</span></li>
                 <li><span>Address</span></li>
                 <li><span>Contact</span></li>
             </ul>
             <ul>
-                <li>SRI ASHOK BENDALAM</li>
-                <li>Doctor</li>
-                <li>74</li>
-                <li>Ramayyaputhuga(V) Kaviti(M) Itchapuram Srikakulam Dist</li>
-                <li>+91 8332005999</li>
+                <li>Nara Chandra Babu Naidu</li>
+                <li>Politics</li>
+                <li>M.A.</li>
+                <li>Naravaripally,Kuppam,Chittoor, Dist.Andhra Pradesh.</li>
+                <li>+91 9963510004</li>
             </ul>
         </div>
     </div>
