--- a/pages/PR folder/mla pages/mla3.html
+++ b/pages/PR folder/mla pages/mla3.html
@@ -84,21 +84,21 @@
 <body>
     <div class="green"></div>
     <div class="trial">
-        <img src="/pages/PR folder/mla-images/mla3.png" alt="">
+        <img src="/images/pavan.png" alt="">
         <div class="trail-details">
             <ul>
                 <li><span>Name</span></li>
                 <li><span>Profession</span></li>
                 <li><span>Age</span></li>
-                <li><span>Address</span></li>
+                <li><span>Qualification</span></li>
                 <li><span>Contact</span></li>
             </ul>
             <ul>
-                <li>SRI ASHOK BENDALAM</li>
-                <li>Doctor</li>
-                <li>74</li>
-                <li>Ramayyaputhuga(V) Kaviti(M) Itchapuram Srikakulam Dist</li>
-                <li>+91 8332005999</li>
+                <li>Konidala Pavan Kalyan</li>
+                <li>Dy.CM</li>
+                <li>SSC</li>
+                <li>Mangalagiri,Guntur Dist,Andhra Pradesh.</li>
+                <li>-</li>
             </ul>
         </div>
     </div>
