--- a/pages/activities.html
+++ b/pages/activities.html
@@ -122,13 +122,12 @@
         <a class="image-popup-no-margins" href="/images/fb_images/image24.png" >
             <img src="/images/fb_images/image24.png" alt="" class="act-image">
         </a>
-        <a class="image-popup-no-margins" href="/images/fb_images/image25.png" >
-            <img src="/images/fb_images/image25.png" alt="" class="act-image">
-        </a>
-        
+    </div>
+    
+    <div class="new-curve"></div>
 
     <!-- Footer -->
-     <div class="footer-menu">
+     <!-- <div class="footer-menu">
         <ul>
             <li><a href="/index.html">Home</a></li>
             <li><a href="about.html">About</a></li>
@@ -136,8 +135,42 @@
             <li><a href="media.html">PRs</a></li>
             <li><a href="contact.html">Contact</a></li>
         </ul>
-     </div>
+     </div> -->
 
+    <!-- Footer -->
+    <div class="footer-curl">
+        <!-- <p> </p> -->
+    </div>
+
+    <div class="footer-info">
+        <div class="foot-data">
+            <h2>Kolli Nooka Reddy</h2>
+            <h3>+91 8019219266, knreddy.aditya@gmail.com Visakhapatnam,<br>Andhra Pradesh</h3>
+        </div>
+        <div class="foot-data">
+            <h2>About</h2>
+            <ul>
+                <li><a href="/index.html"><i class="fa fa-arrow-right" aria-hidden="true"></i> Home</a></li>
+                <li><a href="/pages/about.html"><i class="fa fa-arrow-right" aria-hidden="true"></i> About</a></li>
+                <li><a href="/pages/contact.html"><i class="fa fa-arrow-right" aria-hidden="true"></i> Contact</a></li>
+            </ul>
+        </div>
+        <div class="foot-data">
+            <h2>Quick Links</h2>
+            <ul>
+                <li><a href="/pages/activities.html"><i class="fa fa-arrow-right" aria-hidden="true"></i> Activities</a></li>
+                <li><a href="/pages/media.html"><i class="fa fa-arrow-right" aria-hidden="true"></i> PRs</a></li>
+            </ul>
+        </div>
+        <div class="foot-data">
+            <h2>Social Links</h2>
+            <ul class="social-icons">
+                <li><a href="https://www.facebook.com/nookareddy.kolli/" target="_blank"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
+                <li><a href="https://www.facebook.com/nookareddy.kolli/" target="_blank"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
+                <li><a href="https://www.facebook.com/nookareddy.kolli/" target="_blank"><i class="fa fa-youtube-play" aria-hidden="true"></i></a></li>
+            </ul>
+        </div>
+    </div>
 
      <script>
         function showSidebar(){
@@ -186,6 +219,19 @@
             }
         });
 
+        });
+    </script>
+
+    <script>
+        const header = document.querySelector('nav');
+        const scrollThreshold = 125; // Scroll distance before fixing header
+
+        window.addEventListener('scroll', () => {
+        if (window.pageYOffset >= scrollThreshold) {
+            header.classList.add('fixed');
+        } else {
+            header.classList.remove('fixed');
+        }
         });
     </script>
 
