--- a/pages/about.html
+++ b/pages/about.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=menu" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="shortcut icon" href="/images/fav.png" type="image/x-icon">
+    <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"> -->
 </head>
 <body>
 
@@ -136,15 +137,30 @@
     <div class="slokam">
         <p>అసారే ఖలు సంసారే మృతః కోవా న జాయితీ | <br> యేన జాతేన బహవః జీవని స ఏవ జీవతి  || </p>
     </div>
-    <div class="about-matter2">
-        <p>
-            A meaningful life is of the one, whose life help a million lives and Nooka Reddy Garu believes this deeply. Motivated by the life stories of Swami Vivekananda, Goutham Buddha, and Mother Teresa, Reddy Garu stepped forward to fulfill the purpose of the precious human life. MCA and M.Phil are his Education Qualifications. 
-        </p><br>
-        <p>" స్వయం తీర్ణా పరాం స్రారయతి " This is a saying in sanskrit which means, </p> <br>
-        <p>KN Reddy, a well-educated young person, embodies the transformative power of education. He is deeply committed to fostering a supportive environment where young people can unlock their full potential and realize their aspirations. By providing opportunities for growth, development, and innovation, KN Reddy aims to inspire the next generation of leaders and problem-solvers. He believes that by investing in the education and empowerment of young people, we can create a brighter future for all.
-            <br><br>
-            KN Reddy's passion for education and youth development is unwavering. He is dedicated to making a lasting impact on the world by empowering young people to reach their full potential and become catalysts for positive change. He strives to create a world where education is accessible to all, and where young people have the opportunity to pursue their dreams and make a difference in their communities and beyond.
-        </p>
+
+    <div class="swipe-con">
+        <div class="slidcontainer">
+                <ul class="card-list">
+                    <li class="card-item">
+                        <a href="#" class="card-link">
+                            <img src="/images/sl1.jpg" alt="Card Image" class="card-image">
+                            <h2 class="card-title">Education</h2>
+                        </a>
+                    </li>
+                    <li class="card-item">
+                        <a href="#" class="card-link">
+                            <img src="/images/sl2.jpg" alt="Card Image" class="card-image">
+                            <h2 class="card-title">Rural Development</h2>
+                        </a>
+                    </li>
+                    <li class="card-item">
+                        <a href="#" class="card-link">
+                            <img src="/images/sl3.jpg" alt="Card Image" class="card-image">
+                            <h2 class="card-title">Women Empowerment</h2>
+                        </a>
+                    </li>
+                </ul>
+        </div>
     </div>
     
     <!-- Footer -->
@@ -348,6 +364,8 @@
     });
     observer24.observe(container24);
     </script>
+    <script src="swipescript.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
 
 </body>
 </html>
