--- a/pages/about.html
+++ b/pages/about.html
@@ -122,12 +122,9 @@
         </div>
 
     </div>
-    <hr>
 
     <div class="next-matter">
-        <p>
-            Human life is very precious. As mentioned in The Bhagavadgeetha, after the creation of 1 less 84 lakhs creatures, 84th lakh creation is the invaluable human life. To justify this precious life by serving the society is the motive of Sri Nooka Reddy Garu. A Panchathantra by Shri Vishnu Sharma played a major role in Reddy Garu's Llife. It says,
-        </p>
+
     </div>
 
     <div class="backimg">
@@ -138,7 +135,11 @@
         <p>అసారే ఖలు సంసారే మృతః కోవా న జాయితీ | <br> యేన జాతేన బహవః జీవని స ఏవ జీవతి  || </p>
     </div>
 
+    <div class="transform-line">
+    </div>
+    
     <div class="swipe-con">
+        <h2 class="well">Wellfare Transformation</h2>
         <div class="slidcontainer">
                 <ul class="card-list">
                     <li class="card-item">
@@ -277,6 +278,60 @@
         });
 
         observer11.observe(container11);
+    </script>
+    <script>
+        const container1211 = document.querySelector('.card-item:nth-child(1)');
+
+        const observer1211 = new IntersectionObserver(entries => {
+        entries.forEach(entry => {
+            if (entry.isIntersecting) {
+            container1211.classList.add('animate');
+            // Optional: Disconnect the observer after the animation has played once
+            // observer1.disconnect();
+            } else {
+            // Optional: Reverse the animation when the container is out of view
+            // container11.classList.remove('animate');
+            }
+        });
+        });
+
+        observer1211.observe(container1211);
+    </script>
+    <script>
+        const container1212 = document.querySelector('.card-item:nth-child(2)');
+
+        const observer1212 = new IntersectionObserver(entries => {
+        entries.forEach(entry => {
+            if (entry.isIntersecting) {
+            container1212.classList.add('animate');
+            // Optional: Disconnect the observer after the animation has played once
+            // observer1.disconnect();
+            } else {
+            // Optional: Reverse the animation when the container is out of view
+            // container11.classList.remove('animate');
+            }
+        });
+        });
+
+        observer1212.observe(container1212);
+    </script>
+    <script>
+        const container1213 = document.querySelector('.card-item:nth-child(3)');
+
+        const observer1213 = new IntersectionObserver(entries => {
+        entries.forEach(entry => {
+            if (entry.isIntersecting) {
+            container1213.classList.add('animate');
+            // Optional: Disconnect the observer after the animation has played once
+            // observer1.disconnect();
+            } else {
+            // Optional: Reverse the animation when the container is out of view
+            // container11.classList.remove('animate');
+            }
+        });
+        });
+
+        observer1213.observe(container1213);
     </script>
 
     <script>
