--- a/pages/about.html
+++ b/pages/about.html
@@ -143,19 +143,19 @@
         <div class="slidcontainer">
                 <ul class="card-list">
                     <li class="card-item">
-                        <a href="#" class="card-link">
+                        <a href="/pages/PR folder/wellfare-pages/education.html" class="card-link">
                             <img src="/images/sl1.jpg" alt="Card Image" class="card-image">
                             <h2 class="card-title">Education</h2>
                         </a>
                     </li>
                     <li class="card-item">
-                        <a href="#" class="card-link">
+                        <a href="/pages/PR folder/wellfare-pages/rural.html" class="card-link">
                             <img src="/images/sl2.jpg" alt="Card Image" class="card-image">
                             <h2 class="card-title">Rural Development</h2>
                         </a>
                     </li>
                     <li class="card-item">
-                        <a href="#" class="card-link">
+                        <a href="/pages/PR folder/wellfare-pages/women.html" class="card-link">
                             <img src="/images/sl3.jpg" alt="Card Image" class="card-image">
                             <h2 class="card-title">Women Empowerment</h2>
                         </a>
