--- a/pages/PR folder/wellfare-pages/education.html
+++ b/pages/PR folder/wellfare-pages/education.html
@@ -4,16 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nooka Reddy</title>
-    <link rel="stylesheet" href="/pop-style.css">
+    <link rel="stylesheet" href="/style.css">
     <link rel="stylesheet" href="/pages/media_style.css">
-    <link rel="stylesheet" href="/pages/magnific-popup.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/magnific-popup.js/1.2.0/magnific-popup.css">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/magnific-popup.js/1.2.0/jquery.magnific-popup.min.js"></script>    <link rel="stylesheet" href="/style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=menu" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="shortcut icon" href="/images/fav.png" type="image/x-icon">
+    <link rel="stylesheet" href="wellfare-style.css">
 </head>
 <body>
 
@@ -47,38 +43,48 @@
         </ul>
     </nav>
 
-    <!-- -----------Body--------- -->
+    <!-- Body -->
 
-    <!-- <a class="simple-ajax-popup-align-top" href="/profiles/pr1.html"><img src="/images/profile1.png" alt=""></a><br> -->
-
-    <div class="profile-intro">
-        <h1>Andhra Pradesh Assembly Members</h1>
-    </div>
-    <div class="political-profils-list">
-        <div class="candidate">
-            <a class="simple-ajax-popup" href="/pages/PR folder/mla pages/mla1.html"><img src="/images/cbn.png" alt=""></a>
-            <h2>Nara Chandra Babu Naidu</h2>
-        </div>
-        <div class="candidate">
-            <a class="simple-ajax-popup" href="/pages/PR folder/mla pages/mla2.html"><img src="/images/lokesh.png" alt=""></a>
-            <h2>Nara Lokesh</h2>
-        </div>
-        <div class="candidate">
-            <a class="simple-ajax-popup" href="/pages/PR folder/mla pages/mla3.html"><img src="/images/pavan.png" alt=""></a>
-            <h2>Konidala Pavan Kalyan</h2>
-        </div>
-        <div class="candidate">
-            <a class="simple-ajax-popup" href="/pages/PR folder/mla pages/mla4.html"><img src="/images/jagan.png" alt=""></a>
-            <h2>Jagan Mohan Reddy</h2>
-        </div>
-        <div class="candidate">
-            <a class="" target="_blank" href="https://aplegislature.org/web/legislative-assembly/legislative-assembly/member-s-information?p_p_id=AssemblyMemberInformation_APPortlet_INSTANCE_u0YprwIEdWmS&p_p_lifecycle=0&p_p_state=normal&p_p_mode=view&_AssemblyMemberInformation_APPortlet_INSTANCE_u0YprwIEdWmS_javax.portlet.action=getMemberDetails&_AssemblyMemberInformation_APPortlet_INSTANCE_u0YprwIEdWmS_const_id=1&_AssemblyMemberInformation_APPortlet_INSTANCE_u0YprwIEdWmS_mem_id=3107&_AssemblyMemberInformation_APPortlet_INSTANCE_u0YprwIEdWmS_term_id=16&p_auth=Nls4Rx7x"><img src="/images/group_img.png" alt=""></a>
-            <h2>View More</h2>
-        </div>
+    <div class="back-button-top">
+        <a href="/pages/about.html"><i class="fa fa-arrow-left" aria-hidden="true"></i> Back</a>
     </div>
 
-    <div class="curve">
+
+    <div class="ed-intro-line">
+    <h1>Education Wellfare Development</h1>
     </div>
+
+    <div class="circle-elements-container">
+        <h3>Mr. Reddy Garu has been providing free education to those who cannot afford, to support the families and the future.</h3>
+        <ul>
+            <li>
+                <img src="/images/school.png" alt="">
+                <h4>Schools</h4>
+            </li>
+            <li>
+                <img src="/images/college.png" alt="">
+                <h4>Colleges</h4>
+            </li>
+            <li>
+                <img src="/images/free.png" alt="">
+                <h4>Free Education</h4>
+            </li>
+        </ul>
+    </div>
+    <div class="know-more-button">
+        <a href="#">Know More</a>
+    </div>
+
+    <div class="ed-curl1">
+        <p></p>
+    </div>
+
+    <div class="education-matter">
+        <p>Mr. Reddy Garu have provided free education to school and College students of economically lower background students. Reddy Garu supported many families to improve the family situations by providing free education to their children. Reddy Garu established various schools and colleges, And have been providing wuality education to students that are economically weak. Mr. Reddy Garu contributed a lot for the education system in various locations, and have been supporting the students to get quality education. </p>
+    </div>
+
+
+
 
     <!-- Footer -->
     <div class="footer-curl">
@@ -116,71 +122,18 @@
     </div>
 
 
-
-     <script>
-        function showSidebar(){
-            const sidebar = document.querySelector('.sidebar')
-            sidebar.style.display = 'flex'
-        }
-        function hideSidebar(){
-            const sidebar = document.querySelector('.sidebar')
-            sidebar.style.display = 'none'
-        }
-    </script>
-
     <script>
-        $(document).ready(function() {
+        const header = document.querySelector('nav');
+        const scrollThreshold = 125; // Scroll distance before fixing header
 
-            $('.image-popup-vertical-fit').magnificPopup({
-                type: 'image',
-                closeOnContentClick: true,
-                mainClass: 'mfp-img-mobile',
-                image: {
-                    verticalFit: true
-                }
-                
-            });
-
-            $('.image-popup-fit-width').magnificPopup({
-                type: 'image',
-                closeOnContentClick: true,
-                image: {
-                    verticalFit: false
-                }
-            });
-
-            $('.image-popup-no-margins').magnificPopup({
-                type: 'image',
-                closeOnContentClick: true,
-                closeBtnInside: false,
-                fixedContentPos: true,
-                mainClass: 'mfp-no-margins mfp-with-zoom', // class to remove default margin from left and right side
-                image: {
-                    verticalFit: true
-                },
-                zoom: {
-                    enabled: true,
-                    duration: 300 // don't foget to change the duration also in CSS
-                }
-            });
-
+        window.addEventListener('scroll', () => {
+        if (window.pageYOffset >= scrollThreshold) {
+            header.classList.add('fixed');
+        } else {
+            header.classList.remove('fixed');
+        }
         });
     </script>
-    <script>
-        $(document).ready(function() {
-
-        $('.simple-ajax-popup-align-top').magnificPopup({
-            type: 'ajax',
-            alignTop: true,
-            overflowY: 'scroll' // as we know that popup content is tall we set scroll overflow by default to avoid jump
-        });
-
-        $('.simple-ajax-popup').magnificPopup({
-            type: 'ajax'
-        });
-
-        });
-    </script>
-
+    
 </body>
 </html>
